Add basic CORS documentation.

--- a/content/v1.md
+++ b/content/v1.md
@@ -233,6 +233,32 @@ X-RateLimit-Remaining: 59
 X-RateLimit-Reset: 1392321600
 </pre>
 
+## Cross Origin Resource Sharing
+
+The API supports Cross Origin Resource Sharing (CORS) for AJAX requests. You can
+read the [CORS W3C working draft](http://www.w3.org/TR/cors), or [this
+intro](http://code.google.com/p/html5security/wiki/CrossOriginRequestSecurity)
+from the HTML 5 Security Guide.
+
+Here's a sample request sent from a browser hitting
+`http://example.com`:
+
+    $ curl -i https://api.dribbble.com/v1/users/simplebits -H "Origin: http://example.com"
+    HTTP/1.1 200 OK
+    Access-Control-Allow-Origin: http://example.com
+    Access-Control-Expose-Headers: ETag, Link, X-RateLimit-Limit, X-RateLimit-Remaining, X-RateLimit-Reset
+    Access-Control-Allow-Credentials: true
+
+This is what the CORS preflight request looks like:
+
+    $ curl -i https://api.dribbble.com/v1/users/simplebits -H "Origin: http://example.com" -X OPTIONS -H "Access-Control-Request-Method: GET"
+    HTTP/1.1 200 OK
+    Access-Control-Allow-Origin: http://example.com
+    Access-Control-Allow-Methods: OPTIONS, GET
+    Access-Control-Expose-Headers: ETag, Link, X-RateLimit-Limit, X-RateLimit-Remaining, X-RateLimit-Reset
+    Access-Control-Max-Age: 86400
+    Access-Control-Allow-Credentials: true
+
 ## JSON-P Callbacks
 
 You can send a `callback` parameter to any GET call to have the results wrapped
