Mention that blank fields are null instead of being omitted.

--- a/content/v1.md
+++ b/content/v1.md
@@ -30,6 +30,8 @@ X-RateLimit-Remaining: 59
 X-RateLimit-Reset: 1392321600
 </pre>
 
+Blank fields are included as `null` instead of being omitted.
+
 All timestamps are returned in ISO 8601 format:
 
     YYYY-MM-DDTHH:MM:SSZ
