--- a/content/v1.md
+++ b/content/v1.md
@@ -103,10 +103,10 @@ The possible `rel` values are:
 
 Name | Description
 -----------|-----------|
-`next` |Shows the URL of the immediate next page of results.
-`last` |Shows the URL of the last page of results.
-`first` |Shows the URL of the first page of results.
-`prev` |Shows the URL of the immediate previous page of results.
+`next`  | Shows the URL of the immediate next page of results.
+`prev`  | Shows the URL of the immediate previous page of results.
+`first` | Shows the URL of the first page of results.
+`last`  | Shows the URL of the last page of results. <span class="note">Not provided by all endpoints.</span>
 
 ## Rate Limiting
 
