Update HTTP verb list.

--- a/content/v1.md
+++ b/content/v1.md
@@ -59,7 +59,10 @@ Where possible, the API strives to use appropriate HTTP verbs for each action.
 
 Verb | Description
 -----|-----------
-`GET` | Used for retrieving resources.
+`GET` | Used for retrieving resources. |
+`POST` | Used for creating resources. |
+`PUT` | Used for updating resources with partial JSON data, or performing custom actions. |
+`DELETE` | Used for deleting resources. |
 
 ## Authentication
 
