Document some client errors.

--- a/content/v1.md
+++ b/content/v1.md
@@ -53,6 +53,26 @@ For POST, PATCH, PUT, and DELETE requests, parameters not included in the URL
 should be encoded as JSON with a Content-Type of
 "application/x-www-form-urlencoded".
 
+## Client Errors
+
+There are two possible types of client errors on API calls that receive request
+bodies:
+
+### 1. Sending invalid JSON.
+
+<%= headers 400 %>
+<%= json message: "Problem parsing JSON." %>
+
+### 2. Sending invalid fields.
+
+<%= headers 422 %>
+<%= json message: "Validation failed.",
+  errors: [{
+    attribute: "body",
+    message:   "can't be blank"
+  }]
+%>
+
 ## HTTP Verbs
 
 Where possible, the API strives to use appropriate HTTP verbs for each action.
