Expand on why you should follow the Link header values.

--- a/content/v1.md
+++ b/content/v1.md
@@ -116,8 +116,9 @@ Note that omitting the `page` parameter will return the first page.
 ### Link Header
 
 The pagination info is included in [the Link
-header](http://tools.ietf.org/html/rfc5988). It is important to follow these
-Link header values instead of constructing your own URLs.
+header](http://tools.ietf.org/html/rfc5988). It is possible for some resources
+in the future to not be paginated based on page number, so it is important to
+follow these Link header values instead of constructing your own URLs.
 
     Link: <https://api.dribbble.com/user/followers?page=2&per_page=100>; rel="next",
       <https://api.dribbble.com/user/followers?page=50&per_page=100>; rel="last"
