--- a/content/v1.md
+++ b/content/v1.md
@@ -49,9 +49,8 @@ $ curl -i "https://api.dribbble.com/v1/users/simplebits/followers?page=2"
 In this example, the "simplebits" value is provided for the `user` parameter in
 the path while `page` is passed in the query string.
 
-For POST, PATCH, PUT, and DELETE requests, parameters not included in the URL
-should be encoded as JSON with a Content-Type of
-"application/x-www-form-urlencoded".
+For POST, PUT, and DELETE requests, parameters not included in the URL should be
+encoded as JSON with a Content-Type of "application/x-www-form-urlencoded".
 
 ## Client Errors
 
@@ -120,8 +119,8 @@ header](http://tools.ietf.org/html/rfc5988). It is possible for some resources
 in the future to not be paginated based on page number, so it is important to
 follow these Link header values instead of constructing your own URLs.
 
-    Link: <https://api.dribbble.com/user/followers?page=2&per_page=100>; rel="next",
-      <https://api.dribbble.com/user/followers?page=50&per_page=100>; rel="last"
+    Link: <https://api.dribbble.com/user/followers?page=1&per_page=100>; rel="prev",
+      <https://api.dribbble.com/user/followers?page=2&per_page=100>; rel="next"
 
 The possible `rel` values are:
 
@@ -129,17 +128,16 @@ Name | Description
 -----------|-----------|
 `next`  | Shows the URL of the immediate next page of results.
 `prev`  | Shows the URL of the immediate previous page of results.
-`first` | Shows the URL of the first page of results.
-`last`  | Shows the URL of the last page of results. <span class="note">Not provided by all endpoints.</span>
 
 ## Rate Limiting
 
-For requests using OAuth, you can make up to 3,600 requests per hour. For
-unauthenticated requests, the rate limit allows you to make up to 60 requests
-per hour.
+You can make up to 60 requests per minute, with a hard limit of 10,000 per day.
+For requests using OAuth, the rate limit is for each application and user
+combination. For unauthenticated requests, the rate limit is for the requesting
+IP address.
 
 You can check the returned HTTP headers of any API request to see your current
-rate limit status:
+per minute rate limit status:
 
 <pre class="terminal">
 $ curl -i https://api.dribbble.com/users/simplebits
@@ -156,7 +154,7 @@ status:
 
 Header Name | Description
 -----------|-----------|
-`X-RateLimit-Limit` | The maximum number of requests that the consumer is permitted to make per hour.
+`X-RateLimit-Limit` | The maximum number of requests that the consumer is permitted to make per minute.
 `X-RateLimit-Remaining` | The number of requests remaining in the current rate limit window.
 `X-RateLimit-Reset` | The time at which the current rate limit window resets in [UTC epoch seconds](http://en.wikipedia.org/wiki/Unix_time).
 
@@ -171,8 +169,8 @@ you can easily get the reset time as a JavaScript Date object.
 Once you go over the rate limit you will receive an error response:
 
 <pre class="terminal">
-HTTP/1.1 403 Forbidden
-Status: 403 Forbidden
+HTTP/1.1 429 Too Many Requests
+Status: 429 Too Many Requests
 X-RateLimit-Limit: 60
 X-RateLimit-Remaining: 0
 X-RateLimit-Reset: 1392321600
@@ -180,45 +178,12 @@ X-RateLimit-Reset: 1392321600
 { "message" : "API rate limit exceeded." }
 </pre>
 
-You can also [check your rate limit status](/v1/rate_limit) without incurring an
-API hit.
-<br>
-
 ### Staying within the rate limit
 
-If you are using OAuth, and you are exceeding your rate limit, you can likely
-fix the issue by caching API responses and using [conditional
-requests](#conditional-requests).
-
-If you're using conditional requests and still exceeding your rate limit, please
+If you are exceeding your rate limit, you can likely fix the issue by caching
+API responses. If you're caching and still exceeding your rate limit, please
 [contact us][contact support] to request a higher rate limit for your OAuth
 application.
-
-## User Agent Required
-
-All API requests MUST include a valid `User-Agent` header. Requests with no
-`User-Agent` header will be rejected. We request that you use your Dribbble
-username, or the name of your application, for the `User-Agent` header value.
-This allows us to contact you if there are problems.
-
-Here's an example:
-
-<pre class="terminal">
-User-Agent: Live-Rebounds
-</pre>
-
-If you provide an invalid `User-Agent` header, you will receive a `403
-Forbidden` response:
-
-<pre class="terminal">
-$ curl -iH 'User-Agent: ' https://api.dribbble.com/v1/rate_limit
-
-HTTP/1.0 403 Forbidden
-
-{
-  "message" : "Missing required User-Agent header."
-}
-</pre>
 
 ## Conditional requests
 
@@ -226,9 +191,7 @@ Most responses return an `ETag` header. Many responses also return a
 `Last-Modified` header. You can use the values of these headers to make
 subsequent requests to those resources using the `If-None-Match` and
 `If-Modified-Since` headers, respectively. If the resource has not changed, the
-server will return a `304 Not Modified`. And making a conditional request and
-receiving a 304 response does not count against your [Rate
-Limit](#rate-limiting), so we encourage you to use it whenever possible.
+server will return a `304 Not Modified`.
 
 <pre class="terminal">
 $ curl -i https://api.dribbble.com/v1/users/simplebits
@@ -335,4 +298,4 @@ A link that looks like this:
   ["url1", { rel: "next"}],
   ["url2", { rel: "foo", bar: "baz"}]] %>
 
-[contact support]: http://dribbble.com/contact
+[contact support]: http://dribbble.com/contact?api
