--- a/content/v1.md
+++ b/content/v1.md
@@ -80,7 +80,7 @@ Verb | Description
 -----|-----------
 `GET` | Used for retrieving resources. |
 `POST` | Used for creating resources. |
-`PUT` | Used for updating resources with partial JSON data, or performing custom actions. |
+`PUT` | Used for updating resources, or performing custom actions. |
 `DELETE` | Used for deleting resources. |
 
 ## Authentication
