Clean up markdown and urls.

--- a/content/v1.md
+++ b/content/v1.md
@@ -298,4 +298,4 @@ A link that looks like this:
   ["url1", { rel: "next"}],
   ["url2", { rel: "foo", bar: "baz"}]] %>
 
-[contact support]: http://dribbble.com/contact?api
+[contact support]: https://dribbble.com/contact?api
