Add terms to top menu and other UI changes.

--- a/content/v1.md
+++ b/content/v1.md
@@ -4,8 +4,9 @@ title: Dribbble API
 
 # Overview
 
-This describes the resources that make up the official Dribbble API. If you have
-any problems or requests please [contact support][].
+Please note that you must [register your application](https://dribbble.com/account/applications/new)
+and use your API key when making requests. Before doing so, be sure to read
+our [Terms &amp; Guidelines](/terms/) to learn how the API may be used.
 
 * TOC
 {:toc}
@@ -297,5 +298,12 @@ A link that looks like this:
 <%= json "Link" => [
   ["url1", { rel: "next"}],
   ["url2", { rel: "foo", bar: "baz"}]] %>
+
+## Credits
+
+The structure of this documentation is based on the
+[GitHub Developer](https://github.com/github/developer.github.com) site.
+We thank [GitHub](https://github.com) for their code and their excellent tools
+for building software.
 
 [contact support]: https://dribbble.com/contact?api
