Add branding guidelines and tweak overview.

--- a/content/v1.md
+++ b/content/v1.md
@@ -4,9 +4,11 @@ title: Dribbble API
 
 # Overview
 
-Please note that you must [register your application](https://dribbble.com/account/applications/new)
-and use your API key when making requests. Before doing so, be sure to read
-our [Terms &amp; Guidelines](/terms/) to learn how the API may be used.
+Please note that you must
+[register your application](https://dribbble.com/account/applications/new)
+and authenticate with OAuth or use your API client id and secret when
+making requests. Before doing so, be sure to read our
+[Terms &amp; Guidelines](/terms/) to learn how the API may be used.
 
 * TOC
 {:toc}
