--- a/content/v1.md
+++ b/content/v1.md
@@ -4,11 +4,11 @@ title: Dribbble API
 
 # Overview
 
-Please note that you must
-[register your application](https://dribbble.com/account/applications/new)
-and authenticate with OAuth or use your API client id and secret when
-making requests. Before doing so, be sure to read our
-[Terms &amp; Guidelines](/terms/) to learn how the API may be used.
+Please note that you must [register your
+application](https://dribbble.com/account/applications/new) and authenticate
+with OAuth or use your API client id and secret when making requests. Before
+doing so, be sure to read our [Terms &amp; Guidelines](/terms/) to learn how the
+API may be used.
 
 * TOC
 {:toc}
@@ -303,9 +303,9 @@ A link that looks like this:
 
 ## Credits
 
-The structure of this documentation is based on the
-[GitHub Developer](https://github.com/github/developer.github.com) site.
-We thank [GitHub](https://github.com) for their code and their excellent tools
-for building software.
+The structure of this documentation is based on the [GitHub
+Developer](https://github.com/github/developer.github.com) site.  We thank
+[GitHub](https://github.com) for their code and their excellent tools for
+building software.
 
 [contact support]: https://dribbble.com/contact?api
