Add mockup of announcement message at top of docs page.

--- a/content/v1.md
+++ b/content/v1.md
@@ -2,13 +2,19 @@
 title: Overview
 ---
 
+<div class="announce">
+  <h2>Our new API is beta than ever</h2>
+  <p>Lorem ipsum dolor sit amet, <a href="#">consectetur adipisicing</a> elit, sed do eiusmod
+  tempor incididunt ut labore et dolore magna aliqua.</p>
+</div>
+
 # Overview
 
-Please note that you must [register your
-application](https://dribbble.com/account/applications/new) and authenticate
+<p class="opening">Please note that you must <a href="https://dribbble.com/account/applications/new">register your
+application</a> and authenticate
 with OAuth or use your API client id and secret when making requests. Before
-doing so, be sure to read our [Terms &amp; Guidelines](/terms/) to learn how the
-API may be used.
+doing so, be sure to read our <a href="/terms/">Terms &amp; Guidelines</a> to learn how the
+API may be used.</p>
 
 * TOC
 {:toc}
