Add Beta announcement with link to deprecated API.

--- a/content/v1.md
+++ b/content/v1.md
@@ -3,9 +3,13 @@ title: Overview
 ---
 
 <div class="announce">
-  <h2>Our new API is beta than ever</h2>
-  <p>Lorem ipsum dolor sit amet, <a href="#">consectetur adipisicing</a> elit, sed do eiusmod
-  tempor incididunt ut labore et dolore magna aliqua.</p>
+  <h2>Dribbble v1 API: Beta Than Ever</h2>
+  <p>
+    Currently in <strong>beta</strong> and subject to change, but we hope to mark it as a stable release soon.
+  </p>
+  <p>
+    <a href="https://dribbble.com/api/deprecated">The original Dribbble API</a> is still available but will be retired on <strong>April 8, 2015</strong>.
+  </p>
 </div>
 
 # Overview
