Added missing /v1/ to some examples.

--- a/content/v1.md
+++ b/content/v1.md
@@ -120,7 +120,7 @@ can also set a custom page size up to 100 with the `per_page` parameter. Note
 that for technical reasons not all endpoints respect the `per_page` parameter.
 
 <pre class="terminal">
-$ curl https://api.dribbble.com/user/followers?page=2&per_page=100
+$ curl https://api.dribbble.com/v1/user/followers?page=2&per_page=100
 </pre>
 
 Note that omitting the `page` parameter will return the first page.
@@ -132,8 +132,8 @@ header](http://tools.ietf.org/html/rfc5988). It is possible for some resources
 in the future to not be paginated based on page number, so it is important to
 follow these Link header values instead of constructing your own URLs.
 
-    Link: <https://api.dribbble.com/user/followers?page=1&per_page=100>; rel="prev",
-      <https://api.dribbble.com/user/followers?page=2&per_page=100>; rel="next"
+    Link: <https://api.dribbble.com/v1/user/followers?page=1&per_page=100>; rel="prev",
+      <https://api.dribbble.com/v1/user/followers?page=2&per_page=100>; rel="next"
 
 The possible `rel` values are:
 
@@ -153,7 +153,7 @@ You can check the returned HTTP headers of any API request to see your current
 per minute rate limit status:
 
 <pre class="terminal">
-$ curl -i https://api.dribbble.com/users/simplebits
+$ curl -i https://api.dribbble.com/v1/users/simplebits
 
 HTTP/1.1 200 OK
 Status: 200 OK
